# rs-schema-registry

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: docker.yml
.sqlx/: query-025c2540a04949955434144bb50beda0ffabc9c712ef565969335a3c516f8ed5.json  query-040606b4426bc53e3010d53869cc2c12aeacd735f330c260ab70a109c0fd8cb1.json  query-0ec0e551705e1f965558d1f689bab6147e4d0735d6facfc48258ef29739e308a.json  query-275b42e4c1a48c71a1c165ccaa2568824d72f171ec5e9a5ab801f4abbcb89e90.json  query-3b5ed73456447e8900b318474d3b87a69da9fd161e5994dcc9362b75a91cdfa0.json  query-489a060433802a6875dfaad0db6e6f87c7c9b0b63e6c1a22b74254ed3cace6bd.json  query-7475aa1ef12633f0a8800c9b7cc355c68ea61b163b8d78ea591702dc40345642.json  query-75f5fb5fe6848af9d03e5b7e56d2d98f5e5dfa3cc66d4ae1af3492d16ebf407a.json  query-7eab43de59458b2a127ad42aa998d1ecdff0e04a5a2770ca5b26c8970a61ec7f.json  query-8cb59ed4f6b78d539694a65d12aa8b869836061b013cd25c41468a66fcb42215.json  query-8d13ccf90f91d8e6ebe9baf6886cedd33911b41e8d5a1c0f7bac20381b9ed379.json  query-95744adf9e9af0d0682198d6eccf00c30a5280c5d6f0842c520a8014f32e9273.json  query-9956eee111b3824cefa57e5a3b8d2b2d1774f3d26a895b0cb4b6e07adf24ce44.json  query-ac1f82e94f27f40be890776f6586bb2db6e2658163cf1cf263bb92feaa716579.json  query-b2a0fd2d733a4734b262bb1d171703c1462e384ee9fe8c166eab5c9ba53dbcf9.json  query-c006660b97eba3fb3c494625125f19ad2d472584656765d6e7c71d53cb62eb07.json  query-c52da6a03776fb7c1de1b467a04e1f0ec8683903c83ee0c13a95b680655178ec.json  query-df36128352731aa55f4177b90e1b07a200368fb84e78adbfe6bd8cd79d10f2a5.json  (+5 more)
src/: data.rs  (+6 more)
(+2 files in other folders)
