[package]
name = "rs-schema-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
sqlx = { version = "0.7.0-alpha.3", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
async-trait = "0.1.68"
serde = "1.0.163"
apache-avro = "0.14.0"
sha2 = "0.10.6"
async-recursion = "1.0.4"